Add missing params and responses

--- a/definitions/numbers.yml
+++ b/definitions/numbers.yml
@@ -22,9 +22,6 @@ servers:
 externalDocs:
   url: 'https://developer.nexmo.com/api/developer/numbers'
   x-sha1: 8ad8bc6b0c51af4ca458c13cfced6124783ab113
-security:
-  - apiKey: []
-    apiSecret: []
 paths:
   '/account/numbers/{api_key}/{api_secret}':
     get:
@@ -57,7 +54,10 @@ paths:
       summary: Search available numbers
       description: Retrieve inbound numbers that are available for    the specified country.
       parameters:
+        - $ref: '#/components/parameters/apiKey'
+        - $ref: '#/components/parameters/apiSecret'        
         - $ref: '#/components/parameters/country'
+        - $ref: '#/components/parameters/type'        
         - $ref: '#/components/parameters/pattern'
         - $ref: '#/components/parameters/search_pattern'
         - name: features
@@ -93,6 +93,8 @@ paths:
       summary: Buy a number
       description: Request to purchase a specific inbound number.
       parameters:
+        - $ref: '#/components/parameters/apiKey'
+        - $ref: '#/components/parameters/apiSecret'        
         - $ref: '#/components/parameters/country'
         - name: msisdn
           required: true
@@ -113,12 +115,14 @@ paths:
                 $ref: '#/components/schemas/response'
         '401':
           description: Unauthorized
-  '/number/cancel':
+  '/number/cancel':  
     post:
       operationId: cancelANumber
       summary: Cancel a number
       description: Cancel your subscription for a specific inbound number.
       parameters:
+        - $ref: '#/components/parameters/apiKey'
+        - $ref: '#/components/parameters/apiSecret'        
         - $ref: '#/components/parameters/country'
         - name: msisdn
           required: true
@@ -145,6 +149,8 @@ paths:
       summary: Update a number
       description: Change the behaviour of a number that you own.
       parameters:
+        - $ref: '#/components/parameters/apiKey'
+        - $ref: '#/components/parameters/apiSecret'        
         - $ref: '#/components/parameters/country'
         - name: msisdn
           required: true
@@ -171,10 +177,30 @@ paths:
           schema:
             type: string
           example: inbound
+        - name: messagesCallbackType
+          required: false
+          in: query
+          description: The SMS webhook type (always `app`). Must be used
+            with the `messagesCallbackValue` parameter.
+          schema:
+            type: string
+            enum:
+              - app
+          example: app
+        - name: messagesCallbackValue
+          required: false
+          in: query
+          description: >-
+            A Nexmo Application ID. Must be used
+            with the `messagesCallbackType` parameter.
+          schema:
+            type: string
+          example: 'aaaaaaaa-bbbb-cccc-dddd-0123456789ab'          
         - name: voiceCallbackType
           required: false
           in: query
-          description: The voice webhook type
+          description: The voice webhook type. Must be used
+            with the `voiceCallbackValue` parameter.
           schema:
             type: string
             enum:
@@ -212,19 +238,33 @@ paths:
           description: Unauthorized
 components:
   securitySchemes:
+    apiKeyPath:
+      type: apiKey
+      name: api_key
+      in: path
+      description: >-
+        You can find your API key in the [developer dashboard](https://dashboard.nexmo.com)
+    apiSecretPath:
+      type: apiKey
+      name: api_secret
+      in: path
+      description: >-
+        You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)
+  parameters:
     apiKey:
       type: apiKey
       name: api_key
       in: query
+      required: true
       description: >-
         You can find your API key in the [developer dashboard](https://dashboard.nexmo.com)
     apiSecret:
       type: apiKey
       name: api_secret
       in: query
+      required: true
       description: >-
-        You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)
-  parameters:
+        You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)  
     index:
       name: index
       required: false
@@ -279,6 +319,18 @@ components:
       schema:
         type: string
       example: GB
+    type:
+      name: type
+      in: query
+      required: false
+      description: Set this parameter to filter the type of number, such as mobile or landline
+      schema:
+        type: string
+        enum:
+          - landline
+          - mobile-lvn
+          - landline-toll-free
+      example: mobile-lvn      
   schemas:
     number:
       type: object
@@ -307,6 +359,14 @@ components:
             type: string
           example: [VOICE, SMS]
           description: 'The capabilities of the number: `SMS` or `VOICE` or `SMS,VOICE`'
+        messagesCallbackType:
+          type: string
+          example: app
+          description: 'The messages webhook type: always `app`'
+        messagesCallbackValue:
+          type: string
+          example: aaaaaaaa-bbbb-cccc-dddd-0123456789ab
+          description: A Nexmo Application ID         
         voiceCallbackType:
           type: string
           example: app
