--- a/definitions/numbers.yml
+++ b/definitions/numbers.yml
@@ -23,7 +23,7 @@ externalDocs:
   url: 'https://developer.nexmo.com/api/developer/numbers'
   x-sha1: 8ad8bc6b0c51af4ca458c13cfced6124783ab113
 paths:
-  '/account/numbers/{api_key}/{api_secret}':
+  '/account/numbers/{NEXMO_API_KEY}/{NEXMO_API_SECRET}':
     get:
       operationId: getOwnedNumbers
       summary: List the numbers you own
@@ -238,31 +238,41 @@ paths:
 components:
   parameters:
     apiKey:
-      type: apiKey
       name: api_key
       in: query
       required: true
       description: >-
         You can find your API key in the [developer dashboard](https://dashboard.nexmo.com)
+      schema:
+        type: string
+      example: 1a23b45c        
     apiSecret:
-      type: apiKey
       name: api_secret
       in: query
       required: true
       description: >-
         You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)
+      schema:
+        type: string
+      example: Ab1CDEfghIJ23k4          
     apiKeyPath:
-      type: apiKey
-      name: api_key
+      name: NEXMO_API_KEY
       in: path
+      required: true
       description: >-
         You can find your API key in the [developer dashboard](https://dashboard.nexmo.com)
+      schema:
+        type: string
+      example: 1a23b45c         
     apiSecretPath:
-      type: apiKey
-      name: api_secret
+      name: NEXMO_API_SECRET
       in: path
+      required: true
       description: >-
-        You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)        
+        You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)  
+      schema:
+        type: string
+      example: Ab1CDEfghIJ23k4                 
     index:
       name: index
       required: false
