Add WhatsApp media (#99)
OAS3 for WhatsApp media on Messages and Dispatch APIs

--- a/definitions/dispatch.yml
+++ b/definitions/dispatch.yml
@@ -2,7 +2,7 @@ openapi: "3.0.0"
 info:
   version: 0.3.0
   title: Dispatch API
-  description: 'The Dispatch API enables the developer to specify a multiple message workflow. A workflow follows a template. The first one we are adding is the failover template. The failover template instructs the Messages API to first send a message to the specified channel. If that message fails immediately or if the condition_status is not reached within the given time period the next message is sent. The developer will also receive status webhooks from the messages resource for each delivery and read event. This API is currently Beta.'
+  description: 'The Dispatch API enables the developer to specify a multiple message workflow. A workflow follows a template. The first one we are adding is the failover template. The failover template instructs the Messages API to first send a message to the specified channel. If that message fails immediately or if the condition_status is not reached within the given time period the next message is sent. The developer will also receive status webhooks from the messages resource for each delivery and read event. This API is currently in Beta.'
   contact:
     name: Nexmo DevRel
     email: devrel@nexmo.com
@@ -133,7 +133,7 @@ components:
           maxLength: 50
           example: '447700900000'
           description: |
-            **SMS**: or **Viber**: or **WhatsApp** The phone number of the message recipient in the [E.164](https://en.wikipedia.org/wiki/E.164) format. Don't use a leading + or 00 when entering a phone number, start with the country code, for example, 447700900000.
+            **SMS**: or **MMS**: or **Viber**: or **WhatsApp** The phone number of the message recipient in the [E.164](https://en.wikipedia.org/wiki/E.164) format. Don't use a leading + or 00 when entering a phone number, start with the country code, for example, 447700900000.
 
             **Messenger**: This value is not required.
 
@@ -159,7 +159,7 @@ components:
 
             **Viber**: This is your Service Message ID given to you by Nexmo Account Manager. To find out more please visit [nexmo.com/products/messages](https://www.nexmo.com/products/messages).
 
-            **SMS**:  or **WhatsApp** This value is not required.
+            **SMS**: **MMS**: or **WhatsApp** This value is not required.
           type: string
           minLength: 1
           maxLength: 50
@@ -170,7 +170,7 @@ components:
           maxLength: 50
           example: '447700900000'
           description: |
-            **SMS**: The phone number of the message recipient in the [E.164](https://en.wikipedia.org/wiki/E.164) format.
+            **SMS**: or **MMS**: The phone number of the message sender in the [E.164](https://en.wikipedia.org/wiki/E.164) format.
             
             **WhatsApp**: This is your WhatsApp Business Number  given to you by Nexmo Account Manager. To find out more please visit [nexmo.com/products/messages](https://www.nexmo.com/products/messages).
 
@@ -188,11 +188,11 @@ components:
               description: |
                 The type of message that you are sending.
 
-                **Messenger**: supports all types.
+                **Messenger**: supports `text`, `image`, `audio`, `video` and `file`.
 
                 **Viber Service Messages**: supports `image` and `text`.
                 
-                **WhatsApp**: supports `template` and `text`.
+                **WhatsApp**: supports `template`, `text`, `image`, `audio` and `file`.
 
                 **SMS**: supports `text`.
               type: string
@@ -303,16 +303,22 @@ components:
         properties:
           url:
             type: string
-            description: 'The URL of the image attachment. `messenger` supports .jpg, .png and .gif. `viber_service_msg` supports .jpg and .png.'
+            description: 'The URL of the image attachment. `messenger` and `mms` supports .jpg, .jpeg, .png and .gif. `viber_service_msg` supports .jpg .jpeg, and .png. `whatsapp` supports .jpg .jpeg, and .png.'
             minLength: 1
             maxLength: 2000
             example: 'https://example.com/image.jpg'
+          caption:
+            type: string
+            description: 'Additional text to accompany the image. Supported by WhatsApp and MMS.'
+            minLength: 1
+            maxLength: 3000
+            example: 'Additional text to accompany the image.'
     AudioProperty:
       type: object
       properties:
         url:
           type: string
-          description: 'The URL of the audio attachment. `messenger` supports .mp3.'
+          description: 'The URL of the audio attachment. `messenger` supports .mp3. `whatsapp` supports .acc, .m4a, .amr, .mp3 and .opus.'
           minLength: 1
           maxLength: 2000
           example: 'https://example.com/audio.mp3'
@@ -330,10 +336,16 @@ components:
       properties:
         url:
           type: string
-          description: 'The URL of the file attachment. `messenger` supports a wide range of attachments including .zip, .csv and .pdf'
+          description: 'The URL of the file attachment. `messenger` supports a wide range of attachments including .zip, .csv and .pdf. `whatsapp` supports .pdf, .doc(x), .ppt(x) and .xls(x).'
           minLength: 1
           maxLength: 2000
           example: 'https://example.com/file.zip'
+        caption:
+          type: string
+          description: 'Additional text to accompany the image. Supported by WhatsApp and MMS.'
+          minLength: 1
+          maxLength: 3000
+          example: 'Additional text to accompany the image.'
     TemplateProperty:
       type: object
       properties:
@@ -537,6 +549,8 @@ components:
                       - messenger
                       - viber_sevice_msg
                       - sms
+                      - whatsapp
+                      - mms
                     example: viber_service_msg
                   usage:
                     type: object
