--- a/definitions/account.yml
+++ b/definitions/account.yml
@@ -597,3 +597,21 @@ components:
                 type: string
                 description: Internal Trace ID
                 example: bf0ca0bf927b3b52e3cb03217e1a1ddf
+
+x-errors:
+  validation:
+    description: The provided payload is invalid
+    resolution: |
+        Modify your request to provide a valid payload.
+        * Minimum 8 characters
+        * Maximum 25 characters
+        * Minimum 1 lower case character
+        * Minimum 1 upper case character
+        * Minimum 1 digit
+    link:
+      text: View API reference
+      url: /api/account/api-secret-management#createSecret
+
+  delete-last-secret:
+    description: You can not delete your only API secret
+    resolution: Add another API secret before deleting this one
