The URI in the 'to' of a call needs sip: prefix
Otherwise an error will be returned.

--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -754,7 +754,7 @@ components:
       type: string
       minLength: 1
       maxLength: 50
-      example: rebekka@sip.example.com
+      example: sip:rebekka@sip.example.com
     AddressWebsocket:
       type: string
       minLength: 1
