Add links to NDP docs from API references

--- a/definitions/audit.yml
+++ b/definitions/audit.yml
@@ -1,10 +1,12 @@
 openapi: "3.0.0"
 
 info:
-  version: 1.0.0
+  version: 1.0.1
   title: Nexmo Audit API
   description: >
-    Nexmo's Audit API allows you to view details of changes to your account.
+    Nexmo's Audit API allows you to view details of changes to your account. More information is available at <https://developer.nexmo.com/audit/overview>.
+
+    _Please note that the Audit API is currently in Beta_
   contact:
     name: Nexmo DevRel
     email: devrel@nexmo.com
