--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -1,10 +1,11 @@
 ---
 openapi: 3.0.0
 info:
-  version: 1.0.1
+  version: 1.0.2
   title: Voice API
   description: The Voice API lets you create outboud calls, control in progress calls
-    and get information about historical calls.
+    and get information about historical calls. More information about the Voice API
+    can be found at <https://developer.nexmo.com/voice/voice-api/overview>.
   contact:
     name: Nexmo DevRel
     email: devrel@nexmo.com
